feat: substituir imagem por vídeo no Hero com skeleton loader
- Transforma componente Hero para usar vídeo em vez de imagem
- Adiciona skeleton loader durante carregamento do vídeo
- Configura vídeo com autoplay, loop e muted
- Adiciona declaração de tipos para arquivos .mp4
- Ajusta configuração TypeScript para resolver jsx-runtime
- Adiciona referências explícitas aos tipos do React no vite-env.d.ts

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,8 @@
       "moduleDetection": "force",
       "noEmit": true,
       "jsx": "react-jsx",
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
   
       /* Linting */
       "strict": false,
@@ -26,6 +28,6 @@
         "@/*": ["./src/*"]
       }
     },
-    "include": ["src", "src/types"]
+    "include": ["src", "src/types", "src/vite-env.d.ts"]
   }
   
